syntax = "proto3";

package io.bluetape4k.grpc.examples.helloworld;

option java_multiple_files = true;
option java_outer_classname = "Greeters";

service Greeter {
    rpc SayHello (HelloRequest) returns (HelloReply);
}

message HelloRequest {
    string name = 1;
}

message HelloReply {
    string message = 1;
}
